--- a/Azmoonak/Views/Profile/Index.cshtml
+++ b/Azmoonak/Views/Profile/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
+    Layout = "~/Views/Shared/_ProfileLayout.cshtml";
 }
 
-<h1>Profile Index</h1>
+<h1>پنل کاربر</h1>
 
