--- a/Azmoonak/Views/Shared/Footer.cshtml
+++ b/Azmoonak/Views/Shared/Footer.cshtml
@@ -4,7 +4,7 @@
     <div class="container-fluid mt-5">
         <div class="row footer-logo">
             <div class="col Logo-F">
-                <img class="footerLogoImg" src="~/Image/Site/Slider/onlinexam-Logo.jpg" alt="">
+                <img class="footerLogoImg" src="~/Image/Site/Slider/Orange-Logo.png" alt="">
             </div>
         </div>
     </div>
@@ -45,10 +45,12 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <h3 class="mt-5 mx-auto">آدرس شبکه های اجتماعی ما:</h3>
-                <a href="#"><img class="img-sotialNetwork mt-5" src="~/Image/Site/Slider/facebook.jpg" width="100" height="100" alt="facebook"></a>
-                <a href="#"><img class="img-sotialNetwork mx-2 mt-5" src="~/Image/Site/Slider/towetr.jpg" width="100" height="100" alt="facebook"></a>
-                <a href="#"><img class="img-sotialNetwork mt-5" src="~/Image/Site/Slider/instagram.jpg" width="100" height="100" alt="facebook"></a>
+                <h3 class="mt-5 me-5">آدرس شبکه های اجتماعی ما:</h3>
+            <div class="d-flex justify-content-center gap-4 mt-5 ms-5">
+                <a href="#" class="text-decoration-none"><i class="fa fa-instagram fa-2x text-light"></i></a>
+                <a href="#" class="text-decoration-none"><i class="fa fa-telegram fa-2x text-light"></i></a>
+                <a href="#" class="text-decoration-none"><i class="fa fa-whatsapp fa-2x text-light"></i></a>
+            </div>
             </div>
         </div>
     </div>
