--- a/Azmoonak/Views/Home/BodyPartial.cshtml
+++ b/Azmoonak/Views/Home/BodyPartial.cshtml
@@ -8,13 +8,13 @@
             @{
                 if (User.Identity.IsAuthenticated)
                 {
-                    <a asp-controller="profile" asp-action="Index" class="hover-btn text-decoration-none btn-login me-3 border-0 text-white rounded-2">ورود</a>
-                    <a asp-controller="account" asp-action="register" class="hover-btn text-decoration-none btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
+                    <a asp-controller="profile" asp-action="Index" class="btn hover-btn text-decoration-none btn-login me-3 border-0 text-white rounded-2">ورود</a>
+                    <a asp-controller="account" asp-action="register" class=" btn hover-btn text-decoration-none btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
                 }
                 else
                 {
-                    <a asp-controller="account" asp-action="login" class="hover-btn btn-login text-decoration-none me-3 border-0 text-white rounded-2">ورود</a>
-                    <a asp-controller="account" asp-action="register" class="hover-btn btn-register text-decoration-none me-3 border-0 text-white rounded-2">ثبت نام</a>
+                    <a asp-controller="account" asp-action="login" class=" btn hover-btn btn-login text-decoration-none me-3 border-0 text-white rounded-2">ورود</a>
+                    <a asp-controller="account" asp-action="register" class=" btn hover-btn btn-register text-decoration-none me-3 border-0 text-white rounded-2">ثبت نام</a>
                 }
             }
 
@@ -46,77 +46,119 @@
 <!--__________END____THE____TEST____Section_________-->
 <!--________START_____THE____view_____section_______-->
 
+<div class="container-fluid my-5 p-0 m-0">
 
-<div class="container-fluid book my-4">
-    <div class="row justify-content-center row-cols-3 row-cols-sm-1">
-        <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div rounded-1 mx-auto ">
-            <div class=" bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-book fa-lg fnicon me-3"></span></a><br>
-                <h3 class="mt-3">لیست کتاب ها</h3>
+
+    <div class="row row-cols-md-3 w-100 p-0 m-0">
+
+
+        <div class="col d-flex my-2 justify-content-center p-0 m-0">
+
+
+            <div class="unveiling-box shadow  p-2">
+
+
+                <h4>نمونه سوالات</h4>
+
+
+                <i class="fa fa-scale fa-file-archive-o fa-2x my-3  pointer"></i>
+
+
+                <p class="mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit aliquid provident?</p>
+
+
+                <button class="btn w-75 btn-orenged mt-2">بیشتر</button>
+
+
             </div>
+
+
         </div>
-        <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div  rounded-1 mx-auto my-2 my-md-0">
-            <div class=" bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-file-pdf-o fa-lg pdf fnicon me-4"></span></a><br>
-                <h3 class="mt-3">لیست نمونه سوالات </h3>
+
+
+        <div class="col d-flex my-2 justify-content-center p-0 m-0">
+
+
+            <div class="unveiling-box shadow p-2">
+
+
+                <h4>نمونه سوالات</h4>
+
+
+                <i class="fa fa-scale fa-book fa-2x my-3  pointer"></i>
+
+
+                <p class="mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit aliquid provident?</p>
+
+
+                <button class="btn w-75 btn-orenged mt-2">بیشتر</button>
+
+
             </div>
+
+
         </div>
-        <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div rounded-1 mx-auto ">
-            <div class=" bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-signal fa-lg fnicon me-3"></span></a><br>
-                <h3 class="mt-3">بازدید های اخیر</h3>
-            </div>
-        </div>
-    </div>
 
 
-    <!--________END_____THE____view_____section_______-->
-    <!--_______START_________THE________Introduction______section________-->
-    <div class="container-fluid my-4">
-        <div class="row row-cols-md-2">
-
-
-            <!--در سایز مدیوم عنصر حذف میشود ولی در سایز گوشی و آی پد قابل نمایش است-->
-            <div class="col-12 d-md-none introduction">
-                <img class="rounded-2" src="~/Image/Site/Slider/introduction.jpg" alt="Introduction">
-            </div>
-
-
-
-
-            <div class="col-12 col-md-6 introduction-text">
-                <p class="mx-5 mt-5">
-                    آزمونک جهت بهینه سازی و صرفه جویی در مصرف بیش از <br>حد کاغذ این بستر را برای شما فراهم آورده است
-                    که بدون استفاده از کاغذ بتوانید آزمون های از پیش تعیین شده  خود را در این محیط به سرانجام برسانید
-                    و همگی با هم در حفظ محیط زیست کوشا باشیم
-                </p>
-            </div>
-
-            <!--در سایز گوشی و آی پد عنصر قیر قابل نمایش است و در سایز مدیوم قابل نمایش میشود-->
-            <div class="d-none d-md-block col-md-6 introduction">
-                <img class="rounded-2" src="~/Image/Site/Slider/introduction.jpg" alt="Introduction">
-            </div>
-        </div>
-    </div>
-
-
-    <!--_______END_________THE________Introduction______section________-->
-    <!--_________START________Site____Status____Section_______-->
-
-
-    <div class="container-fluid">
-        <div class="row SiteStatus">
-            <div class="col text-center align-self-center">
-                <span class="fa fa-group  fa-lg status-icons userSpan"></span><br>
-                <h4 class="mt-3">@ViewBag.UserCount</h4>
-            </div>
-            <div class="col text-center align-self-center">
-                <a href="#"><span class="fa fa-lg status-icons fa-object-group"></span></a>
-                <h4 class="mt-3">@ViewBag.GroupCount</h4>
-            </div>
-            <div class="col text-center align-self-center">
-                <a href="#"><span class=" fa fa-lg fa-book status-icons"></span></a>
-                <h4 class="mt-3">@ViewBag.QuestionCount</h4>
+        <div class="col d-flex my-2 justify-content-center p-0 m-0">
+            <div class="unveiling-box shadow p-2">
+                <h4>نمونه سوالات</h4>
+                <i class="fa fa-scale fa-bar-chart fa-2x my-3  pointer"></i>
+                <p class="mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit aliquid provident?</p>
+                <button class="btn w-75 btn-orenged mt-2">بیشتر</button>
             </div>
         </div>
     </div>
+</div>
+
+
+<!--________END_____THE____view_____section_______-->
+<!--_______START_________THE________Introduction______section________-->
+<div class="container-fluid my-4">
+    <div class="row row-cols-md-2">
+
+
+        <!--در سایز مدیوم عنصر حذف میشود ولی در سایز گوشی و آی پد قابل نمایش است-->
+        <div class="col-12 d-md-none introduction">
+            <img class="rounded-2" src="~/Image/Site/Slider/introduction.jpg" alt="Introduction">
+        </div>
+
+
+
+
+        <div class="col-12 col-md-6 introduction-text">
+            <p class="mx-5 mt-5">
+                آزمونک جهت بهینه سازی و صرفه جویی در مصرف بیش از <br>حد کاغذ این بستر را برای شما فراهم آورده است
+                که بدون استفاده از کاغذ بتوانید آزمون های از پیش تعیین شده  خود را در این محیط به سرانجام برسانید
+                و همگی با هم در حفظ محیط زیست کوشا باشیم
+            </p>
+        </div>
+
+        <!--در سایز گوشی و آی پد عنصر قیر قابل نمایش است و در سایز مدیوم قابل نمایش میشود-->
+        <div class="d-none d-md-block col-md-6 introduction">
+            <img class="rounded-2" src="~/Image/Site/Slider/introduction.jpg" alt="Introduction">
+        </div>
+    </div>
+</div>
+
+
+<!--_______END_________THE________Introduction______section________-->
+<!--_________START________Site____Status____Section_______-->
+
+
+<div class="container-fluid">
+    <div class="row SiteStatus">
+        <div class="col text-center align-self-center">
+            <a href="#"><span class="fa fa-lg status-icons fa-group"></span>تعداد کاربران</a>
+            <h4 class="mt-3">@ViewBag.UserCount</h4>
+        </div>
+        <div class="col text-center align-self-center">
+            <a href="#"><span class="fa fa-lg status-icons fa-object-group"></span>تعداد دسته بندی ها</a>
+            <h4 class="mt-3">@ViewBag.GroupCount</h4>
+        </div>
+        <div class="col text-center align-self-center">
+            <a href="#"><span class=" fa fa-lg fa-book status-icons"></span>تعداد سوالات</a>
+            <h4 class="mt-3">@ViewBag.QuestionCount</h4>
+        </div>
+    </div>
+</div>
