--- a/Azmoonak/wwwroot/Css/MainStyle.css
+++ b/Azmoonak/wwwroot/Css/MainStyle.css
@@ -1,4 +1,40 @@
-﻿* {
+﻿
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,348 +44,348 @@ body {
     direction: rtl;
     font-family: vazir-bold;
 }
+
 @font-face {
     font-family: 'vazir-bold';
     src: url('../fonts/vazir-bold.ttf') format('truetype');
 }
 
-.contain {
-    width: 100%;
+
+:root {
+    --orenged-color: #ff5e00;
+}
+
+
+
+/* START____ THE_______________ HEADER _______________STYLE ____________________________*/
+.newheader {
+    width: 90%;
+    height: 80px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+.logo {
+    width: 100px;
     height: 100px;
-    background-color: #f07900;
-}
-
-.Logo {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-    .Logo img {
-        position: absolute;
-        border-top-left-radius: 0;
-        border-top-right-radius: 29px;
-        border-bottom-left-radius: 29px;
-        border-bottom-right-radius: 0;
-        right: 50px;
-    }
-
-    .Logo i {
-        font-size: 40px;
-        position: absolute;
-        top: 30px;
-        right: 32px;
-        cursor: pointer;
-    }
-/*____the_____style___menu__sliding_____ */
-.offCanavas {
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(128, 128, 128, 0.596);
+    background-color: #ffffff;
     position: absolute;
-    top: 0;
-    z-index: 55;
-    visibility: hidden;
-}
-
-.menu-sliding {
-    width: 60%;
-    height: 100%;
-    background-color: white;
-    position: relative;
-    animation: menuSliding forwards 1s;
-}
-
-@keyframes menuSliding {
-    from {
-        width: 0;
-        opacity: 0;
-    }
-
-    to {
-        width: 60%;
-        opacity: 1;
-    }
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 14px;
-    font-size: 26px;
-    cursor: pointer;
-    z-index: 99;
-}
-
-.img {
-    width: 100%;
-    height: 20%;
-}
-
-    .img img {
-        width: 50%;
-        height: 100%;
-        margin-top: 23px;
-    }
-
-.sliding-group-li {
-    list-style-type: none;
-    margin-top: 12px;
-    margin-right: 16px;
-    padding: 3px 4px;
-    cursor: pointer;
-    border-radius: 3px;
-    z-index:10;
-}
-
-    .sliding-group-li:hover {
-        background-color: #eeeeee;
-        z-index:10;
-    }
-
-.angles {
-    width: 20px;
-    height: 20px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 3px;
+    /* top: -90%; */
+    top: -13px;
+    /* right: 40%; */
     border-radius: 50%;
-    background-color: black;
-    color: rgb(255, 132, 0);
-}
-
-.dropdown-onlineexam-box {
-    border: 1px solid #eae9e9;
-    display: none;
-    width: 260px
-}
-
-    .dropdown-onlineexam-box a {
-        text-decoration: none;
-        color: black;
-    }
-
-    .dropdown-onlineexam-box li {
-        width: 257px;
-        list-style-type: none;
-        margin-top: 5px;
-        padding: 3px 4px;
-        cursor: pointer;
-        border-bottom: 1px solid #e6e3e3;
-    }
-
-        .dropdown-onlineexam-box li:hover {
-            background-color: aliceblue;
-            border-left: 2px solid #8585f0;
-        }
-
-
-/*____the_____style___menu__sliding_____ */
-
-
-
-
-
-.menu-ul li {
-    list-style-type: none;
-    margin-right: 20px;
-    margin-left: 20px;
-    cursor: pointer;
-}
-
-.list-menu {
     display: flex;
     align-items: center;
-    height: 100px;
+    justify-content: center;
 }
 
-.search-box {
-    background-color: white;
-    position: relative;
-    width: 238px;
-    border-radius: 10px;
+
+
+
+    .logo::before {
+        content: "";
+        width: 15px;
+        height: 15px;
+        /*background-color: #ffa200;*/
+        background-color: var(--orenged-color);
+        position: absolute;
+        top: 62.8px;
+        left: 94px;
+        border-top-left-radius: 30px;
+        transform: rotate(2deg);
+        box-shadow: -3px -6px #ffffff;
+    }
+
+
+
+
+    .logo::after {
+        content: "";
+        width: 15px;
+        height: 15px;
+        /*background-color: #ffa200;*/
+        background-color: var(--orenged-color);
+        position: absolute;
+        top: 63.3px;
+        left: -9px;
+        border-top-right-radius: 30px;
+        transform: rotate(1deg);
+        box-shadow: 3px -6px #ffffff;
+    }
+
+
+
+
+
+.logo-box {
+    width: 80%;
+    height: 80%;
+    background-color: red;
+    border-radius: 50%;
+    background-size: cover;
 }
+
+
+
+
+.logo-img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    border-radius: 50%;
+}
+
+
+
+
+
+.saerch {
+    width: 240px;
+    height: auto;
+    background-image: linear-gradient(45deg,#cbcbcb,#c9c9c9,#cccccc,#cecece);
+    /* position: absolute;
+    right: 300px;
+    top: 300px; */
+}
+
+
 
 
 .search-inpt {
-    border: none;
+    width: 100%;
+    height: 100%;
     outline: none;
-    padding: 3px;
-    width: 100%;
-    border-radius: 10px;
+    border: none;
+    background-color: transparent;
+    padding: 5px 4px;
+    box-shadow: 1px 2px 4px 2px #353535;
+    transition: ease .2s;
 }
 
-.search-box i {
+
+
+
+    .search-inpt:focus {
+        box-shadow: 2px 2px 5px 2px #353535;
+        border: 1.3px solid #ffa200;
+    }
+
+
+
+
+.bg-site-mode-color {
+    /*background-color: #ffa200;*/
+    background-color: var(--orenged-color);
+}
+
+
+
+
+.saerch label svg {
     position: absolute;
-    z-index: 19;
-    top: 7px;
-    left: 9px;
-    color: rgb(28, 28, 255);
+    left: 20px;
     cursor: pointer;
 }
 
-@media only screen and (max-width:950px) {
-    .search-box {
-        width: 188px;
-    }
-}
 
-@media only screen and (max-width:767px) {
-    .search-box {
-        width: 277px;
-        top: 30px;
-        padding: 1px;
-    }
+
+
+.ulList {
+    height: 100%;
 }
 
 
-/*_________hover_______List_______section_______*/
-.hidden-testList {
-    width: auto;
-    height: 150px;
-    padding-top: 10px;
-    background-color: white;
-    box-shadow: 3px 4px 10px gray;
+
+
+.pointer {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+
+
+
+
+.list-test {
+    width: 200px;
+    height: 240px;
+    background-color: #ffffff;
     position: absolute;
-    top: 15%;
-    right: 33%;
-    opacity: 0;
+    top: 95px;
+    box-shadow: 2px 3px 6px 2px rgb(36, 36, 36);
     visibility: hidden;
-}
-
-.guide:hover {
-    color: #ffffff;
-    text-shadow: 1px 2px 1px orange;
-}
-
-#online-test:hover .hidden-testList {
-    opacity: 1;
-    visibility: visible;
-    animation: animinTestList forwards .9s;
-}
-
-
-@keyframes animinTestList {
-    from {
-        top: 17%;
-    }
-
-    to {
-        top: 15%;
-    }
-}
-
-.hidden-testList::after {
-    content: '';
-    width: 20px;
-    height: 20px;
-    background-color: white;
-    position: absolute;
-    top: -3px;
-    right: 4px;
-    transform: rotate(43deg);
-}
-
-.hidden-testList li {
-    width: 100%;
-    transition: .3s;
-    border-radius: 2px;
-    cursor: pointer;
-    padding: 3px 0;
-    border-bottom: 1px solid #8585f0;
-}
-
-    .hidden-testList li:hover {
-        background-color: rgb(216, 216, 216);
-    }
-
-.proposal-testList {
-    width: auto;
-    height: 150px;
-    padding-top: 10px;
-    background-color: white;
-    box-shadow: 3px 4px 10px gray;
-    position: absolute;
-    top: 15%;
-    right: 43%;
     opacity: 0;
-    visibility: hidden;
+    transition: all .5s;
+    z-index: 99 !important;
 }
 
-    .proposal-testList::after {
-        content: '';
-        width: 20px;
-        height: 20px;
-        background-color: white;
-        position: absolute;
-        top: -3px;
-        right: 4px;
-        transform: rotate(43deg);
+
+
+
+    .list-test li:hover {
+        border-bottom: 1px solid orangered;
+        background-color: #dadada;
     }
 
-#proposal-menu:hover .proposal-testList {
-    opacity: 1;
+
+
+
+        .list-test li:hover a {
+            color: black !important;
+        }
+
+
+
+
+.pointer:hover .list-test {
     visibility: visible;
-    animation: animinTestList forwards .9s;
+    opacity: 1;
+    top: 81px;
 }
 
-.proposal-testList li {
-    width: 100%;
-    transition: .3s;
-    border-radius: 2px;
-    cursor: pointer;
-    padding: 3px 0;
-    border-bottom: 1px solid #8585f0;
-}
 
-    .proposal-testList li:hover {
-        background-color: rgb(216, 216, 216);
-    }
 
-.example-question-testList {
-    width: auto;
-    height: auto;
-    padding-top: 10px;
-    background-color: white;
-    box-shadow: 3px 4px 10px gray;
+
+.sample-question {
+    width: 200px;
+    height: 240px;
+    background-color: #ffffff;
     position: absolute;
-    top: 15%;
-    right: 52%;
-    opacity: 0;
+    top: 95px;
+    box-shadow: 2px 3px 6px 2px rgb(36, 36, 36);
     visibility: hidden;
+    opacity: 0;
+    transition: all .5s;
+    z-index: 99 !important;
 }
 
-    .example-question-testList::after {
-        content: '';
-        width: 20px;
-        height: 20px;
-        background-color: white;
-        position: absolute;
-        top: -3px;
-        right: 4px;
-        transform: rotate(43deg);
+
+
+
+    .sample-question li:hover {
+        border-bottom: 1px solid orangered;
+        background-color: #dadada;
     }
 
-#example-question-menu:hover .example-question-testList {
-    opacity: 1;
+
+
+
+        .sample-question li:hover a {
+            color: black !important;
+        }
+
+
+
+
+.sample-parent:hover .sample-question {
     visibility: visible;
-    animation: animinTestList forwards .9s;
+    opacity: 1;
+    top: 81px;
 }
 
-.example-question-testList li {
-    width: 100%;
-    transition: .3s;
-    border-radius: 2px;
-    cursor: pointer;
-    padding: 3px 0;
-    border-bottom: 1px solid #8585f0;
+
+
+
+.humburger-menu {
+    width: 50px;
+    height: 50px;
 }
 
-    .example-question-testList li:hover {
-        background-color: rgb(216, 216, 216);
+
+
+
+    .humburger-menu img {
+        width: 100%;
+        height: 100%;
+        padding: 4px;
+        background-image: linear-gradient(45deg,rgb(255, 185, 64),rgb(255, 211, 141),rgb(255, 194, 89));
+        cursor: pointer;
+        border-radius: 8px;
     }
+
+
+
+
+
+
+
+
+.background-slider {
+    width: 100%;
+    height: 100vh;
+    right: 0;
+    background-color: #353535bd;
+    z-index: 999 !important;
+}
+
+
+
+
+
+.logo-responsive img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-right: 30px;
+    position: absolute;
+    left: 10px;
+}
+
+
+
+
+.menu-slider {
+    width: 50%;
+    height: 100vh;
+    right: -100%;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    transition: ease .4s;
+    z-index: 999;
+}
+
+
+
+
+    .menu-slider.show {
+        right: 0;
+        transition: ease .4s;
+    }
+
+
+
+
+.lists-menu ul {
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+.lists-menu li {
+    background-color: #bcbcbc;
+    border-radius: 4px;
+}
+
+
+
+
+    .lists-menu li:hover {
+        background-color: #353535;
+    }
+
+
+
+
+
+/* END____ THE_______________ HEADER _______________STYLE ____________________________*/
 
 
 .header {
@@ -358,7 +394,7 @@ body {
     background-color: rgb(206, 176, 176);
     display: flex;
     position: relative;
-    z-index:10;
+    z-index: 10;
 }
 
 
@@ -615,61 +651,78 @@ body {
 /*____________________________________________________________________________________ */
 
 
-/*_________START______THE________view_____section______*/
+
+
+/*new card for introduction abilites*/
 
 
 
 
 
-.fnicon {
-    font-size: 38px !important;
-    color: rgb(0, 0, 43);
-    position: relative;
-    right: 50px;
-    transition: ease-in-out .3s;
+
+
+
+.unveiling-box {
+    width: 300px;
+    height: 290px;
+    background-color: #ff5e00;
+    color: #fff;
+    border-radius: 10px;
+    text-align: center;
 }
 
 
 
 
-    .fnicon:hover {
-        color: orange;
-        text-shadow: 2px 2px 7px white;
+.pointer {
+    cursor: pointer;
+}
+
+
+
+
+.btn-orenged {
+    background-color: #ffffff;
+    color: #ff5e00;
+    /* width: 90px !important  ; */
+}
+
+
+
+
+    .btn-orenged:hover {
+        outline: 1px solid #fff;
     }
 
 
 
 
-.pdf {
-    position: relative;
-    right: 70px !important;
+.fa-scale {
+    transition: ease .5s;
 }
 
 
 
 
-.div {
-    width: 380px;
-    height: 300px;
-    background-color: #151515;
-}
-
-
-
-
-@media only screen and (max-width:1140px) {
-    .div {
-        width: 270px;
-        height: 240px;
+    .fa-scale:hover {
+        transform: scale(1.3) rotate(360deg);
     }
-}
 
 
 
 
 
 
-/*_________END______THE________view_____section______*/
+
+
+
+
+/*new card for introduction abilites*/
+
+
+
+
+
 /*________________________________________________________________________________________________ */
 /*_________START______THE_______introduction_____Section______*/
 .introduction img {
@@ -799,15 +852,47 @@ body {
     border-bottom: 1px solid black;
 }
 
-.img-sotialNetwork {
-    border-radius: 50%;
-    transition: ease-in-out .3s;
+.fa-instagram {
+    transition: ease .3s;
 }
 
-    .img-sotialNetwork:hover {
-        box-shadow: 3px 3px 10px whitesmoke;
-        width: 90px;
-        height: 90px;
+
+
+
+
+    .fa-instagram:hover {
+        color: #e1306c !important;
+        text-shadow: 2px 3px 15px #fff;
+        transform: scale(1.5)
+    }
+
+
+
+
+.fa-telegram {
+    transition: ease .3s;
+}
+
+
+
+
+    .fa-telegram:hover {
+        color: #0088cc !important;
+        text-shadow: 1px 1px 15px #fff;
+        transform: scale(1.5);
+    }
+
+.fa-whatsapp {
+    transition: ease .3s;
+}
+
+
+
+
+    .fa-whatsapp:hover {
+        color: #25d366 !important;
+        text-shadow: 1px 1px 15px #fff;
+        transform: scale(1.5);
     }
 
 
@@ -874,16 +959,18 @@ body {
     font-size: 23px;
     color: #f8a145;
 }
+
 .q-question {
     color: #D8D9DA;
 }
+
 .q-alpha {
     color: #D8D9DA;
 }
 
-    .q-form input {
-        font-size: 15px;
-    }
+.q-form input {
+    font-size: 15px;
+}
 
 .q-right {
     direction: rtl;
@@ -969,4 +1056,85 @@ body {
     .right-box {
         padding: 20px;
     }
+}
+
+
+
+
+
+
+
+
+/*style sectioned showexample groups form exam*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
+
+.parent {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 120px;
+}
+
+
+
+
+.child-list {
+    width: 300px;
+    height: 250px;
+    background-color: grey;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 4px 4px 8px rgb(199, 199, 199);
+    transition: 1s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+.hoverd {
+    width: 100%;
+    height: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #078679;
+    transition: all .4s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+.h1 {
+    overflow: hidden;
+    opacity: 0;
+    transition: .5s;
+}
+
+.child-list:hover .h1 {
+    opacity: 1;
+}
+
+
+
+
+.child-list:hover .hoverd {
+    height: 100%;
 }
