--- a/Azmoonak/Views/Shared/_ProfileLayout.cshtml
+++ b/Azmoonak/Views/Shared/_ProfileLayout.cshtml
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a asp-area="" asp-controller="profile" asp-action="GetCertificate">
                             <span class="icons">
                                 <i class="fa fa-list fa-lg" class="fa fa-list fa-lg"></i>
                             </span>
