--- a/Azmoonak/Views/Exam/EndExam.cshtml
+++ b/Azmoonak/Views/Exam/EndExam.cshtml
@@ -13,6 +13,9 @@
 <h1>تعداد جواب های غلط : @Model.FalseAnswer</h1>
 <h1>بدون پاسخ ها : @Model.NoAnswer</h1>
 
+<h1>دکمه برگشت به خانه </h1>
+<h1>دکمه رفتن به صفحه نمایش کارنامه شاید</h1>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
