--- a/Azmoonak/Views/Shared/_ProfileLayout.cshtml
+++ b/Azmoonak/Views/Shared/_ProfileLayout.cshtml
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a asp-area="" asp-controller="profile" asp-action="index">
                             <span class="icons">
                                 <i class="fa fa-dashboard fa-lg"></i>
                             </span>
