--- a/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
@@ -16,12 +16,12 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="GroupName" class="control-label"></label>
-                <input asp-for="GroupName" class="form-control" />
+                <input asp-for="GroupName" class="form-control border-black border-4" />
                 <span asp-validation-for="GroupName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GroupDes" class="control-label"></label>
-                <textarea asp-for="GroupDes" class="form-control" ></textarea>
+                <textarea asp-for="GroupDes" class="form-control border-black border-4"></textarea>
                 <span asp-validation-for="GroupDes" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -36,7 +36,4 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
