--- a/Azmoonak/Areas/Admin/Views/Groups/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Index.cshtml
@@ -11,44 +11,51 @@
     <a asp-action="Create" class="btn btn-success ms-1"><span class="fa fa-plus-circle fa-lg"></span> Create New</a>
 </p>
 <div>
-<table class="table table-striped table-dark" >
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.GroupName)
-            </th>
-            @*<th>
+    <table class="table table-bordered table-striped table-dark">
+        <thead class="text-center">
+            <tr>
+                <th>
+                    <span class="fa fa-lg fa-bars"></span>
+                    @Html.DisplayNameFor(model => model.GroupName)
+                </th>
+                @*<th>
                 @Html.DisplayNameFor(model => model.GroupDes)
-            </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.NotShow)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.GroupName)
-            </td>
-            @*<td>
+                </th>*@
+                <th>
+                    <span class="fa fa-lg  fa-eye-slash"></span>
+                    @Html.DisplayNameFor(model => model.NotShow)
+                </th>
+                <th>
+
+                    <h6><span class="fa fa-lg fa-info-circle"></span> جزئیات</h6>
+
+                </th>
+            </tr>
+        </thead>
+        <tbody class="text-center">
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.GroupName)
+                    </td>
+                    @*<td >
                 @Html.DisplayFor(modelItem => item.GroupDes)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.NotShow)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><span class="fa fa-edit"></span> Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><span class="fa fa-info"></span> Details & Questions </a> |
-                <div id='@("delete-group-"+item.Id)' class="d-inline-block"> 
-                    <a onclick="DeleteForm(@item.Id)" class="btn btn-danger"><span class="fa fa-trash"></span> Delete</a>
-                </div>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                </td>*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NotShow)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><span class="fa fa-edit"></span> Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><span class="fa fa-info"></span> Details & Questions </a> |
+                        <div id='@("delete-group-"+item.Id)' class="d-inline-block">
+                            <a onclick="DeleteForm(@item.Id)" class="btn btn-danger"><span class="fa fa-trash"></span> Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
 
 
