--- a/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
@@ -16,28 +16,28 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FName" class="control-label"></label>
-                <input asp-for="FName" class="form-control" />
+                <input asp-for="FName" class="form-control border-black border-4" />
                 <span asp-validation-for="FName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LName" class="control-label"></label>
-                <input asp-for="LName" class="form-control" />
+                <input asp-for="LName" class="form-control border-black border-4" />
                 <span asp-validation-for="LName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mobile" class="control-label"></label>
-                <input asp-for="Mobile" class="form-control" />
+                <input asp-for="Mobile" class="form-control border-black border-4" />
                 <span asp-validation-for="Mobile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control border-black border-4" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="RoleId" class="control-label"></label>
-                <select asp-for="RoleId" class="form-control" asp-items="ViewBag.RoleId"></select>
+                <select asp-for="RoleId" class="form-control border-black border-4" asp-items="ViewBag.RoleId"></select>
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
             <div class="form-group form-check mt-3">
