--- a/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
@@ -9,28 +9,33 @@
 <h5 class="mt-3">تعداد کاربران : @ViewBag.UserCount</h5> 
 
 
-<table class="table table-striped table-dark mt-4 ">
+<table class="table table-bordered table-striped table-dark mt-4 ">
     <thead>
         <tr>
-            <th>
+            <th class="text-center">
+                <span class="fa fa-lg fa-id-card-o"></span>
                 @Html.DisplayNameFor(model => model.FName)
             </th>
-            <th>
+            <th class="text-center">
+                <span class="fa fa-lg fa-id-card-o"></span>
                 @Html.DisplayNameFor(model => model.LName)
             </th>
-            <th>
+            <th class="text-center">
+                <span class="fa fa-lg Example of phone fa-phone"></span>
                 @Html.DisplayNameFor(model => model.Mobile)
             </th>
-            <th>
+            @*  <th class="text-center">
                 @Html.DisplayNameFor(model => model.Password)
-            </th>
-            @* <th>
+            </th> *@
+            @* <th class="text-center">
             @Html.DisplayNameFor(model => model.Code)
             </th> *@
-            <th>
-                @Html.DisplayNameFor(model => model.Role)
+            <th class="text-center">
+                <span class="fa fa-lg fa-user-o"></span>
+                @Html.DisplayNameFor(model => model.Role.RoleName)
             </th>
-            <th>
+            <th class="text-center">
+                <span class="fa fa-lg fa-male"></span>
                 @Html.DisplayNameFor(model => model.IsActive)
             </th>
             <th></th>
@@ -40,28 +45,28 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.FName)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.LName)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Mobile)
                 </td>
-                <td>
+                @* <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Password)
-                </td>
-                @*             <td>
+                </td> *@
+                @* <td class="text-center">
             @Html.DisplayFor(modelItem => item.Code)
             </td> *@
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Role.RoleName)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.IsActive)
                 </td>
-                <td>
+                <td class="text-center">
                     <a asp-area="admin" asp-controller="panel" asp-action="EditUser" asp-route-id="@item.Id" class="btn btn-warning">Edit<span class="fa fa-edit"></span></a>
                     @* <a asp-action="Details" asp-route-id="@item.Id" class=" btn btn-info"><span class="fa fa-info"></span></a> *@
                     <a data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="Delete('@(item.Id)')" class="btn btn-danger"><span class="fa fa-trash-o"></span></a>
