--- a/Azmoonak/Areas/Admin/Views/Questions/Edit.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Edit.cshtml
@@ -16,47 +16,47 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="QText" class="control-label"></label>
-                <input asp-for="QText" class="form-control" />
+                <input asp-for="QText" class="form-control border-black border-4" />
                 <span asp-validation-for="QText" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AnOne" class="control-label"></label>
-                <input asp-for="AnOne" class="form-control" />
+                <input asp-for="AnOne" class="form-control border-black border-4" />
                 <span asp-validation-for="AnOne" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AnTwo" class="control-label"></label>
-                <input asp-for="AnTwo" class="form-control" />
+                <input asp-for="AnTwo" class="form-control border-black border-4" />
                 <span asp-validation-for="AnTwo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AnThree" class="control-label"></label>
-                <input asp-for="AnThree" class="form-control" />
+                <input asp-for="AnThree" class="form-control border-black border-4" />
                 <span asp-validation-for="AnThree" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AnFour" class="control-label"></label>
-                <input asp-for="AnFour" class="form-control" />
+                <input asp-for="AnFour" class="form-control border-black border-4" />
                 <span asp-validation-for="AnFour" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CorrectAn" class="control-label"></label>
-                <input asp-for="CorrectAn" class="form-control" />
+                <input asp-for="CorrectAn" class="form-control border-black border-4" />
                 <span asp-validation-for="CorrectAn" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GroupId" class="control-label"></label>
-                <select asp-for="GroupId" class="form-control" asp-items="ViewBag.GroupId"></select>
+                <select asp-for="GroupId" class="form-control border-black border-4" asp-items="ViewBag.GroupId"></select>
                 <span asp-validation-for="GroupId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success mt-3" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class=" btn btn-danger mt-3" >Back to List</a>
 </div>
 
