--- a/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
@@ -11,26 +11,32 @@
     <a asp-action="Create" class="btn btn-success me-4"><span class="fa fa-plus-circle fa-lg "></span> Create New</a>
 </p>
 <div class="col-12">
-    <table class="table table-striped table-dark rounded-5">
-    <thead>
+    <table class="table table-bordered table-striped table-dark rounded-5">
+        <thead class="text-center">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.QText)
+                @* @Html.DisplayNameFor(model => model.QText) *@
+                <h6><span class="fa fa-book"></span> متن سوال</h6>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AnOne)
+                @* @Html.DisplayNameFor(model => model.AnOne) *@
+                    <h6>(الف)</h6>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AnTwo)
+                @* @Html.DisplayNameFor(model => model.AnTwo) *@
+                    <h6>(ب)</h6>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AnThree)
+                @* @Html.DisplayNameFor(model => model.AnThree) *@
+                    <h6>(ج)</h6>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AnFour)
+                @* @Html.DisplayNameFor(model => model.AnFour) *@
+                    <h6>(د)</h6>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CorrectAn)
+                @* @Html.DisplayNameFor(model => model.CorrectAn) *@
+                    <h6><span class="fa fa-lg fa-check-circle-o" style="color:lightgreen;"></span> (جواب درست)</h6>
             </th>
             @*<th>
                 @Html.DisplayNameFor(model => model.Group)
@@ -38,7 +44,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+        <tbody class="text-center">
 @foreach (var item in Model) {
         <tr>
             <td style="direction:rtl">
