--- a/Azmoonak/Views/Exam/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Exam/QuestionPartial.cshtml
@@ -7,12 +7,18 @@
         {
             <!--related Question -->
             <div class="bg-q">
-
-                <h2 class="q-question">@Model.ElementAt(i).QText</h2>
-                <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anone-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnOne">الف) @Model.ElementAt(i).AnOne </span></span><hr>
-                <span class="q-form"><span class="q-alpha"><input type="radio" id='@("antwo-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnTwo">ب) @Model.ElementAt(i).AnTwo </span></span><hr>
-                <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anthree-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnThree">ج) @Model.ElementAt(i).AnThree </span></span><hr>
-                <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anfour-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnFour">د) @Model.ElementAt(i).AnFour </span></span><hr>
+                <fieldset>
+                    <h2 class="q-question">@Model.ElementAt(i).QText</h2>
+                    <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anone-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnOne">الف) @Model.ElementAt(i).AnOne </span></span>
+                    <hr>
+                    <span class="q-form"><span class="q-alpha"><input type="radio" id='@("antwo-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnTwo">ب) @Model.ElementAt(i).AnTwo </span></span>
+                    <hr>
+                    <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anthree-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnThree">ج) @Model.ElementAt(i).AnThree </span></span>
+                    <hr>
+                    <span class="q-form"><span class="q-alpha"><input type="radio" id='@("anfour-"+@n)' name="browser" onclick="myFunction(this.value,@n)" value="@Model.ElementAt(i).AnFour">د) @Model.ElementAt(i).AnFour </span></span>
+                    <hr>
+                </fieldset>
+                
 
 
                 <input name="[@i].Id" value="@Model.ElementAt(i).Id" readonly hidden>
