--- a/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -30,7 +30,15 @@
                             <span class="icons">
                                 <i class="fa fa-dashboard fa-lg"></i>
                             </span>
-                            <span class="title">داشبورد مدیر</span>
+                            <span class="title">داشبورد</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="admin" asp-controller="panel" asp-action="SiteDetail">
+                            <span class="icons">
+                                <i class="fa fa-signal fa-lg"></i>
+                            </span>
+                            <span class="title">جزئیات سایت</span>
                         </a>
                     </li>
                     <li>
