--- a/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
@@ -1,69 +1,57 @@
-﻿@model IEnumerable<Azmoonak.Database.Models.User>
+﻿@model Azmoonak.Database.Models.User
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-
-<table class="table table-bordered table-striped table-dark mt-3">
-    <thead class="text-center">
-        <tr>
-            <th>
-                <span class="fa fa-lg fa-id-card-o"></span>
-                @Html.DisplayNameFor(model => model.FName)
-            </th>
-            <th>
-                <span class="fa fa-lg fa-id-card-o"></span>
-                @Html.DisplayNameFor(model => model.LName)
-            </th>
-            <th>
-                <span class="fa fa-lg Example of phone fa-phone"></span>
-                @Html.DisplayNameFor(model => model.Mobile)
-            </th>
-            @* <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th> *@
-            @* <th>
-            @Html.DisplayNameFor(model => model.Code)
-            </th> *@
-            <th>
-                <span class="fa fa-lg fa-user-o"></span>
-                @Html.DisplayNameFor(model => model.Role.RoleName)
-            </th>
-           @*  <th>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </th> *@
-        </tr>
-    </thead>
-    <tbody class="text-center">
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Mobile)
-                </td>
-               @*  <td>
-                    @Html.DisplayFor(modelItem => item.Password)
-                </td> *@
-                @*             <td>
-            @Html.DisplayFor(modelItem => item.Code)
-            </td> *@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Role.RoleTitle)
-                </td>
-                @* <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td> *@
-            </tr>
-        }
-    </tbody>
-</table>
-
-<hr />               
+<div>
+    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1" hidden></h4>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Mobile)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Mobile)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Password)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Password)
+        </dd>
+        @*         <dt class = "col-sm-2">
+        @Html.DisplayNameFor(model => model.Code)
+        </dt>
+        <dd class = "col-sm-10">
+        @Html.DisplayFor(model => model.Code)
+        </dd> *@
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IsActive)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IsActive)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Role.RoleName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Role.RoleName)
+        </dd>
+    </dl>
+</div>
+<div>
+    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>Edit</a>
+</div>
