editing panel button to farsi

--- a/Azmoonak/Areas/Admin/Views/Groups/Delete.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Delete.cshtml
@@ -5,8 +5,8 @@
     <form asp-action="DeleteEntryGroup" class="d-inline-block">
         <input asp-for="Id" readonly hidden />
         <div>
-            <input type="submit" value="Delete" class="btn btn-danger" />
-            <a id='@("btn-cancel-"+Model.Id)' class="btn btn-outline-danger">Cancel</a>
+            <input type="submit" value="حذف" class="btn btn-danger" />
+            <a id='@("btn-cancel-"+Model.Id)' class="btn btn-outline-danger">لغو</a>
         </div>
     </form>
 </div>
