--- a/Azmoonak/Areas/Admin/Views/Groups/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Details.cshtml
@@ -44,8 +44,8 @@
 </div>
 <div>
     
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-edit"></span> Edit</a> |
-    <a asp-action="Index" class="btn btn-danger"><span class="fa fa-arrow-left"></span> Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-edit fa-lg"></span> ویرایش</a> |
+    <a asp-action="Index" class="btn btn-danger"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
     <hr />
     <h5>تعداد سوالات از این دسته بندی : @ViewBag.QuestionCount</h5>
     @*related Question*@
