--- a/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
@@ -55,8 +55,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="EditUser" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> |
-    <a class="text-decoration-none btn btn-danger text-white" asp-action="Index">Back to List</a>
+    <a asp-action="EditUser" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a> |
+    <a class="text-decoration-none btn btn-danger text-white" asp-action="Index"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
 </div>
 
 
