--- a/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
@@ -53,5 +53,5 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>Edit</a>
+    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>ویرایش پروفایل</a>
 </div>
