--- a/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
@@ -54,8 +54,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-edit"></span> Edit</a> |
-    <a asp-action="Index" class="btn btn-outline-info"><span class="fa fa-arrow-left"></span> Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-edit fa-lg"></span> ویرایش</a> |
+    <a asp-action="Index" class="btn btn-danger"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
 </div>
 
 
