--- a/Azmoonak/Areas/Admin/Views/Groups/Create.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Create.cshtml
@@ -27,13 +27,13 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <input type="submit" value="ثبت" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-danger mt-3 ">Back to List</a>
+    <a class="text-decoration-none btn btn-danger text-white mt-3" asp-action="Index"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
 </div>
 
