--- a/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
@@ -30,7 +30,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="ثبت" class="btn btn-success" />
             </div>
         </form>
     </div>
