--- a/Azmoonak/Areas/Admin/Views/Panel/Delete.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Delete.cshtml
@@ -8,8 +8,8 @@
     <h4 class="text-danger text-center">آیا مطمعن هستید؟</h4>
     <form asp-area="admin" asp-controller="panel" asp-action="delete" class="text-center">
         <input asp-for="Id" hidden />
-        <button class="btn btn-success">Yes</button>
-        <a asp-controller="panel" asp-action="getusers" class="btn btn-danger">No</a>
+        <button class="btn btn-success"> بله</button>
+        <a asp-controller="panel" asp-action="getusers" class="btn btn-danger"> خیر</a>
     </form>
 </div>
 
