--- a/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
@@ -43,13 +43,13 @@
 
 
             <div class="form-group mt-3">
-                <input type="submit" value="Save" class="btn btn-success" />
+                <input type="submit" value="ثبت" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div class="btn btn-danger mt-3" >
-    <a class="text-decoration-none text-white" asp-action="Index">Back to List</a>
+    <a class="text-decoration-none text-white" asp-action="Index"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
 </div>
 
